[[bin]]
name = "tsync"
path = "./bin/tsync.rs"

[[bin]]
name = "dsync"
path = "./bin/dsync.rs"

[package]
name = "backend-next"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
dsync = "0.1.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
tokio = { version = "1.43.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["cors", "trace"] }
tower-sessions = "0.14.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tsync = "1"
diesel = { version = "2.2.0", features = ["sqlite", "returning_clauses_for_sqlite_3_35", "r2d2", "chrono"] }
# build libsqlite3 as part of the build process
# uncomment this line if you run into setup issues
# libsqlite3-sys = { version = "0.30", features = ["bundled"] }
dotenvy = "0.15"
rand = "0.8.5"
uuid = { version = "1.12.0", features = ["v4"] }

[dependencies.chrono]
features = ["serde"]
version = "*"
